# gondola-archive

./: .gitignore  Cargo.toml  README.md  flake.nix  password
files/css/: style.css  yotsuba.css  yotsublue.css
files/js/: disqus.js  sorttable.js  video.js
files/misc/: updates.txt
src/: config.rs  main.rs  writer.rs
