[package]
name = "gondola-rs"
version = "0.2.1"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.5.0"
actix-service = "1.0.6"
actix-web = "3.3.2"
actix-rt = "2.1.0"
chrono = "0.4.19"
fast-logger = "0.6.0"
file-rotate = "0.4.0"
gameshell = "0.4.1"
indexmap = "1.6.1"
maud = "0.22.2"
rand = "0.8.3"
rand_pcg = "0.3.0"
serde = "1.0.123"
serde_derive = "1.0.123"
sha2 = "0.10.6"
