[package]
name = "gondola-rs"
version = "0.2.1"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"

[dependencies]
actix-files = "0.6.2"
actix-service = "2.0.2"
actix-web = "4.3.1"
actix-rt = "2.8.0"
chrono = "0.4.26"
fast-logger = "0.7.1"
file-rotate = "0.7.4"
gameshell = "0.4.1"
indexmap = "1.9.3"
maud = "0.25"
rand = "0.8.5"
rand_pcg = "0.3.1"
serde = "1.0.123"
serde_derive = "1.0.123"
sha2 = "0.10.6"
